--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,18 @@
+- More generator algorithms
+    - Kruskal's
+    - Growing Tree
+    - Wilson's
+    - Aldous-Broder's
+    - Recursive Division
+
 - Grids
     - delta
     - polar (theta)
     - sigma
+    - upsilon
+    - zeta
 
 - Braiding
 - Weaving
 
-- More generator algorithms
+- analyser for deadends, bias, etc
